unpackaged/main/default/objects/PagesApi__Menu_Item__c/PagesApi__Menu_Item__c.object-meta.xml
<CustomObject>
    <description>Menu Items create a hierarchy of links to both Pages and Custom Weblinks.</description>
    <label>Menu Item</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>