unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Custom_URL__c</fullName>
    <description>** Conditionally Required ** URL for the Web Link. Required for &quot;Custom URL&quot; Menu Items.</description>
    <inlineHelpText>** Conditionally Required ** URL for the Web Link. Required for &quot;Custom URL&quot; Menu Items.</inlineHelpText>
    <label>Custom URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>