unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_Order__c</fullName>
    <description>** Required ** The order in which this Menu Item should display.</description>
    <inlineHelpText>** Required ** The order in which this Menu Item should display.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>