unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Display_Text__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Display_Text__c</fullName>
    <description>** Conditionally Required ** The text to display for &quot;Text&quot; Menu Items.</description>
    <inlineHelpText>** Conditionally Required ** The text to display for &quot;Text&quot; Menu Items.</inlineHelpText>
    <label>Display Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>