unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Icon__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Icon__c</fullName>
    <description>Optional icon to use in context with the Menu Item. Note! Icon fonts are available only if you define links to the Stylesheets containing their definitions in either the Theme or in a Site&#39;s Global CSS.</description>
    <inlineHelpText>Optional icon to use in context with the Menu Item. Note! Icon fonts are available only if you define links to the Stylesheets containing their definitions in either the Theme or in a Site&#39;s Global CSS.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>