unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** SYSTEM **</description>
    <inlineHelpText>** SYSTEM **</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>