unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Link_Target__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Link_Target__c</fullName>
    <description>Specifies how target link is opened in the browser. Valid values include &quot;_self&quot; to open in the same tab, and &quot;_blank&quot; to open in a new window or tab.</description>
    <inlineHelpText>Specifies how target link is opened in the browser. Valid values include &quot;_self&quot; to open in the same tab, and &quot;_blank&quot; to open in a new window or tab.</inlineHelpText>
    <label>Link Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>