unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Menu__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Menu__c</fullName>
    <description>** Required ** Master-detail link to the parent Menu.</description>
    <inlineHelpText>** Required ** Master-detail link to the parent Menu.</inlineHelpText>
    <label>Menu</label>
    <referenceTo>PagesApi__Menu__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>