unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the parent Menu Item.</description>
    <inlineHelpText>Link to the parent Menu Item.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>PagesApi__Menu_Item__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>