unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__On_Click_Javascript__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__On_Click_Javascript__c</fullName>
    <description>Javascript to run for the &quot;on click&quot; event (when the Menu Item is clicked).</description>
    <inlineHelpText>Javascript to run for the &quot;on click&quot; event (when the Menu Item is clicked).</inlineHelpText>
    <label>On Click Javascript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>