unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Page__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** When the Type of Menu Item is &quot;Page Link&quot;.</description>
    <inlineHelpText>** Conditionally Required ** When the Type of Menu Item is &quot;Page Link&quot;.</inlineHelpText>
    <label>Page</label>
    <referenceTo>PagesApi__Page__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>