unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Style_Class__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Style_Class__c</fullName>
    <description>Custom CSS Style Class to use for the Menu Item.</description>
    <inlineHelpText>Custom CSS Style Class to use for the Menu Item.</inlineHelpText>
    <label>Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>