unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Type__c</fullName>
    <description>** Required ** The Type of Menu Item defaults to &quot;Page Link&quot;.</description>
    <inlineHelpText>** Required ** The Type of Menu Item defaults to &quot;Page Link&quot;.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Page</fullName>
                <default>true</default>
                <label>Custom Page</label>
            </value>
            <value>
                <fullName>Custom URL</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>On Click Javascript</fullName>
            </value>
            <value>
                <fullName>Standard Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>