unpackaged/main/default/objects/PagesApi__Menu_Item__c/fields/PagesApi__Value__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Value__c</fullName>
    <description>** SYSTEM **</description>
    <inlineHelpText>** SYSTEM **</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>